#239 add z_step (inverse of slic3r z_steps_per_mm) seems to work without breaking. todo: change all slicing stuff from double to scaled int.

--- a/resources/ui_layout/printer_fff.ui
+++ b/resources/ui_layout/printer_fff.ui
@@ -4,6 +4,7 @@ group:Size and coordinates
 	bed_shape
 	setting:max_print_height
 	setting:z_offset
+	setting:z_step
 group:extruders_count_event:milling_count_event:Capabilities
 	extruders_count
 	setting:single_extruder_multi_material
